# mdit-py-plugins

./: .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  codecov.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  index.md
mdit_py_plugins/: colon_fence.py  leaf_directive.py  substitution.py  utils.py
mdit_py_plugins/abbr/: __init__.py  index.py
mdit_py_plugins/admon/: __init__.py  index.py  port.yaml
mdit_py_plugins/amsmath/: __init__.py
mdit_py_plugins/anchors/: __init__.py  index.py
mdit_py_plugins/attrs/: __init__.py  index.py  parse.py
mdit_py_plugins/container/: __init__.py  index.py
mdit_py_plugins/deflist/: __init__.py  index.py
mdit_py_plugins/dollarmath/: __init__.py  index.py
mdit_py_plugins/fancy_list/: __init__.py
mdit_py_plugins/field_list/: __init__.py
mdit_py_plugins/footnote/: __init__.py  index.py
mdit_py_plugins/front_matter/: __init__.py  index.py
mdit_py_plugins/gfm/: __init__.py
mdit_py_plugins/gfm_autolink/: _match.py  index.py
mdit_py_plugins/myst_blocks/: __init__.py  index.py
mdit_py_plugins/myst_role/: __init__.py  index.py
mdit_py_plugins/subscript/: __init__.py  port.yaml
mdit_py_plugins/superscript/: index.py
mdit_py_plugins/tasklists/: __init__.py
mdit_py_plugins/texmath/: __init__.py  index.py
mdit_py_plugins/wordcount/: __init__.py
tests/: test_abbr.py  test_admon.py  test_amsmath.py  test_anchors.py  test_attrs.py  test_colon_fence.py  test_container.py  test_deflist.py  test_dollarmath.py  test_fancy_list.py  test_field_list.py  test_footnote.py  test_front_matter.py  test_gfm.py  test_gfm_autolink.py  test_leaf_div.py  test_myst_block.py  test_myst_role.py  test_subscript.py  test_substitution.py  test_superscript.py  test_tasklists.py  test_texmath.py  test_wordcount.py
tests/fixtures/: abbr.md  admon.md  amsmath.md  attrs.md  colon_fence.md  container.md  deflist.md  dollar_math.md  fancy_list.md  field_list.md  footnote.md  gfm.md  gfm_autolink.md  leaf_directive.md  myst_block.md  myst_role.md  span.md  subscript.md  subscript_strikethrough.md  substitution.md  superscript.md  tasklists.md  texmath_bracket.md  texmath_dollar.md  wordcount.md
tests/test_admon/: test_plugin_parse.yml  test_plugin_parse_0_.yml  test_plugin_parse_1_.yml  test_plugin_parse_2_.yml
tests/test_attrs/: test_attrs_allowed.yml
tests/test_dollarmath/: test_plugin_parse.yml
tests/test_fancy_list/: test_plugin_parse.yml
tests/test_field_list/: test_plugin_parse.yml
tests/test_leaf_div/: test_no_content_parse.yml
tests/test_substitution/: test_tokens.yml
