[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mdit-py-plugins"
dynamic = ["version"]
description = "Collection of plugins for markdown-it-py"
readme = "README.md"
authors = [{name = "Chris Sewell", email = "chrisj_sewell@hotmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
keywords = ["markdown", "markdown-it", "lexer", "parser", "development"]
requires-python = ">=3.7"
dependencies = ["markdown-it-py>=1.0.0,<3.0.0"]

[project.urls]
Homepage = "https://github.com/executablebooks/mdit-py-plugins"
Documentation = "https://mdit-py-plugins.readthedocs.io"

[project.optional-dependencies]
code_style = ["pre-commit"]
testing = [
    "coverage",
    "pytest",
    "pytest-cov",
    "pytest-regressions",
]
rtd = [
    "attrs",
    "myst-parser~=0.16.1",
    "sphinx-book-theme~=0.1.0",
]

[tool.flit.module]
name = "mdit_py_plugins"

[tool.flit.sdist]
exclude = [
    "docs/",
    "tests/",
]

[tool.isort]
profile = "black"
force_sort_within_sections = true
known_first_party = ["mdit_py_plugins", "tests"]

[tool.ruff]
line-length = 110
extend-select = ["B0", "C4", "ICN", "ISC", "N", "RUF", "SIM"]
extend-ignore = ["E731", "N802", "N803", "N806"]

[tool.mypy]
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
strict_equality = true
