[metadata]
name = mdit-py-plugins
version = attr: mdit_py_plugins.__version__
description = Collection of plugins for markdown-it-py
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/executablebooks/mdit-py-plugins
author = Chris Sewell
author_email = chrisj_sewell@hotmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
keywords = markdown, lexer, parser, development
project_urls =
    Documentation=https://markdown-it-py.readthedocs.io

[options]
packages = find:
install_requires =
    markdown-it-py>=1.0.0,<3.0.0
python_requires = ~=3.6
include_package_data = True
zip_safe = True

[options.packages.find]
exclude =
    test*
    benchmarking

[options.extras_require]
code_style =
    pre-commit==2.6
testing =
    coverage
    pytest>=3.6,<4
    pytest-cov
    pytest-regressions
rtd =
    myst-parser~=0.14.0
    sphinx-book-theme~=0.1.0

[mypy]
show_error_codes = True
warn_unused_ignores = True
warn_redundant_casts = True
no_implicit_optional = True
strict_equality = True

[flake8]
max-line-length = 100
extend-ignore = E203,E731
